- Git Master:
	- PowerPoint:
		- Improved title layout API.
- Version 0.4.2:
	- PowerPoint:
		- Support for speaker notes.
		- Advanced way to set the side of the slides.
		- Allow you to make a slide from the title slide layout.
		- Now adding all the original Office layouts to the generated pptx document.
		- Table support fixes (japneet121).
	- Word:
		- Support for header and footer.
		- Support for bookmarks and hyperlinks.
	- Design and development:
		- Document type plugins system to easy adding new features.
- Version 0.4.1:
	- Ability to make text hyperlinks in docx - Merge pull request #154 from embrialabs/master
	- Added support for bullets (they weren't working, and were just showing numbers) - Merge pull request #151 from njcaruso/master.
	- Fixed issue with _scaling private method - Merge pull request #150 from andrewBalekha/bugfix/chart-scaling-issue
	- pptx/bug: Multiline text using \n for splitting paragraphs would style properly only first paragraph - Merge pull request #140 from tomasztunik/master
	- Merge pull request #145 from arrowing/grid-span - Merge pull request #145 from arrowing/grid-span
- Version 0.4.0:
	- For all Microsoft Office based documents:
		- Bug fix: Changing the document's properties from the document's settings didn't work.
		- You can now change also the 'categories' and 'status' in the document's properties.
		- 'creator' now changed to 'aurthor' (but you can still use also 'creator').
	- PowerPoint:
		- Charts now working again, using jszip so no need for any external tool.
	- Word:
		- Paragraph's text new options:
			- 'shdType' and 'shdColor' (used with 'back').
			- 'border', 'borderColor' and 'borderSize'.
			- 'highlight'.
		- All inside table borders (by cgarethc).
- Version 0.2.11:
	- Allow user to set options in addImage when they use createByJson to generate docx (peizhuang) and also to change the image type (Ziv Barber).
	- Provide varying column sizes in Word tables (cgarethc).