@@ -322,11 +322,29 @@ function makeXlsx ( genobj, new_type, options, gen_private, type_info ) {
 
 		if ( data.sheet.width ) {
 			outString += '<cols>';
-			for ( var i = 0; i < data.sheet.width.length; i++ ) {
-				outString += "<col min=\"" + (i+1) + "\" max=\"" + (i+1) + "\" width=\"" + data.sheet.width[i] + "\" customWidth=\"1\"/>";
-			}
+
+			data.sheet.width.forEach ( function ( value, indexId ) {
+				if ( typeof value === 'object' ) {
+					var outAttr = '';
+
+					if ( typeof value.width === 'number' && value.width === value.width ) {
+						outAttr = ' width="' + value.width + '" customWidth="1"';
+					} // Endif.
+
+					if ( typeof value.styleCode === 'number' && value.styleCode === value.styleCode ) {
+						outAttr = ' style="' + value.styleCode + '"';
+					} // Endif.
+
+					outString += "<col min=\"" + (value.colId + 1) + "\" max=\"" + (value.colId + 1) + "\"" + outAttr + "/>";
+
+				// Support for old code, not recommended:
+				} else if ( typeof value === 'number' ) {
+					outString += "<col min=\"" + (indexId + 1) + "\" max=\"" + (indexId + 1) + "\" width=\"" + value + "\" customWidth=\"1\"/>";
+				} // Endif.
+			});
+
 			outString += '</cols>';
-		}
+		} // Endif.
 
 		outString += '<sheetData>';
 
@@ -453,9 +471,12 @@ function makeXlsx ( genobj, new_type, options, gen_private, type_info ) {
 	 */
 	genobj.makeNewSheet = function () {
 		var pageNumber = gen_private.pages.length;
-		var sheetObj = {}; // The sheet object that the user will use.
 
-		sheetObj.data = []; // Place here all the data.
+		// The sheet object that the user will use:
+		var sheetObj = {
+			data: [], // Place here all the data.
+			width: []
+		};
 
 		gen_private.pages[pageNumber] = {};
 		gen_private.pages[pageNumber].id = pageNumber;
@@ -477,6 +498,57 @@ function makeXlsx ( genobj, new_type, options, gen_private, type_info ) {
 				clear: 'data'
 			}
 		);
+
+		sheetObj.setColumnWidth = function ( colId, width ) {
+			var colRec = null;
+
+			colId = cbCellToNumber ( colId + '1', false );
+
+			sheetObj.width.every ( function ( value ) {
+				if ( value.colId === colId ) {
+					colRec = value;
+					return false;
+				} // Endif.
+
+				return true;
+			});
+
+			if ( !colRec ) {
+				sheetObj.width.push ({
+					colId: colId,
+					width: width
+				});
+				return;
+			} // Endif.
+
+			colRec.width = width;
+		};
+
+		sheetObj.setColumnCenter = function ( colId ) {
+			var colRec = null;
+
+			colId = cbCellToNumber ( colId + '1', false );
+
+			sheetObj.width.every ( function ( value ) {
+				if ( value.colId === colId ) {
+					colRec = value;
+					return false;
+				} // Endif.
+
+				return true;
+			});
+
+			if ( !colRec ) {
+				sheetObj.width.push ({
+					colId: colId,
+					width: 9.140625,
+					styleCode: 1
+				});
+				return;
+			} // Endif.
+
+			colRec.styleCode = 1;
+		};
 
 		sheetObj.setCell = function ( position, data_val ) {
 			var rel_pos = cbCellToNumber ( position, true );
